[package]
name = "rust-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
